# xview

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-build-push.yml
scripts/: hello.py
templates/: base.html
tests/: test_utils.py
xview/: config.py  main.py  utils.py  viewer.py
